force-app/main/default/objects/Project__c/Project__c.object-meta.xml
<CustomObject>
    <description>Projects, which can also be called Social Impact Bonds, are separate entities, which have a social improvement aim. The difference between these and grants or loans are the way they are structured, where the funding comes in avg 20% from gov funding and 80% from a private investor and the payment from gov is only given upon agreed specific outcomes being achieved</description>
    <label>Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>