force-app/main/default/objects/Project__c/fields/Data_Protection_Text__c.field-meta.xml
<CustomField>
    <fullName>Data_Protection_Text__c</fullName>
    <inlineHelpText>Text used by COF_DP Visualforce page</inlineHelpText>
    <label>Data Protection Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>