force-app/main/default/objects/Project__c/fields/Declaration_Text__c.field-meta.xml
<CustomField>
    <fullName>Declaration_Text__c</fullName>
    <inlineHelpText>Text that appears on the Start Page of the Declaration section</inlineHelpText>
    <label>Declaration Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>