force-app/main/default/objects/Project__c/fields/Freedom_of_Information_Act_Text__c.field-meta.xml
<CustomField>
    <fullName>Freedom_of_Information_Act_Text__c</fullName>
    <inlineHelpText>Text used by COF_FOI Visualforce page</inlineHelpText>
    <label>Freedom of Information Act Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>