force-app/main/default/objects/Project__c/fields/Reasons_It_Was_Not_Successful__c.field-meta.xml
<CustomField>
    <fullName>Reasons_It_Was_Not_Successful__c</fullName>
    <label>Reasons It Was Not Successful</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>