force-app/main/default/objects/Project__c/fields/Was_It_Successful__c.field-meta.xml
<CustomField>
    <fullName>Was_It_Successful__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Was It Successful</label>
    <type>Checkbox</type>
</CustomField>